--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 h2
-  | Edit #{resource_name.to_s.humanize}
+  | Редагувати #{resource_name.to_s.humanize}
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .field
@@ -11,7 +11,7 @@ h2
       | Currently waiting confirmation for: #{resource.unconfirmed_email}
   .field
     = f.label :password
-    i (leave blank if you don't want to change it)
+    i (Залиште пустим якщо не хочете змінювати)
     br/
     = f.password_field :password, autocomplete: "off"
   .field
@@ -20,12 +20,12 @@ h2
     = f.password_field :password_confirmation, autocomplete: "off"
   .field
     = f.label :current_password
-    i (we need your current password to confirm your changes)
+    i (нам потрібен ваш поточний пароль для підтвердження ваших змін)
     br/
     = f.password_field :current_password, autocomplete: "off"
   .actions
-    = f.submit "Update"
-h3 Cancel my account
+    = f.submit "Оновити"
+h3 Відмінити мій акаунт
 p
-  | Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  | Unhappy? #{button_to "Відмінити мій акаунт", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+= link_to "Назад", :back
