--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -4,7 +4,7 @@ h2 Реєстрація
   .field
     = f.label :full_name, 'Прізвище та Ім’я'
     br/
-    = f.email_field :full_name, autofocus: true
+    = f.text_field :full_name, autofocus: true
   .field
     = f.label :klass_id, 'Клас'
     br/
