--- a/app/views/tests/index.html.slim
+++ b/app/views/tests/index.html.slim
@@ -1,9 +1,8 @@
 .select_form
   = form_for :test, url: {action: "search_tests"}, method: 'get', class: 'select-form' do |f|
-    = select_tag :klass, options_for_select(klass_options), {prompt: 'Виберіть клас', class: "klass-selector"}
-    = select_tag :subject, "", {prompt: 'Виберіть предмет', class: "subject-selector"}
-    = f.select(:theme_id, '', {prompt: 'Виберіть тему'})
-    = f.submit 'Показати', class: 'show-tests'
+    = select_tag :klass, options_for_select(klass_options, session[:filter].try(:[], 'klass')), {prompt: 'Виберіть клас', class: "klass-selector"}
+    = select_tag :subject, options_for_select(subject_options(session[:filter]), session[:filter].try(:[], 'subject') ), {prompt: 'Виберіть предмет', class: "subject-selector"}
+    = f.select(:theme_id, options_for_select(theme_options(session[:filter]), session[:filter].try(:[], 'theme') ), {prompt: 'Виберіть тему'})
   .new-item
-    = link_to 'Додати тест', [:new, :test], class: 'hiddenClass', id: 'add-test'
+    = link_to 'Додати тест', [:new, :test], class: 'hiddenClass'
 .table
