--- a/app/views/layouts/_user_header.html.slim
+++ b/app/views/layouts/_user_header.html.slim
@@ -1,7 +1,7 @@
 ul.nav.nav-pills.pull-right
   - if user_signed_in?
     li= link_to "Головна", root_path
-    li= link_to "Тестування", tests_path
+    li= link_to "Тестування", can?(:manage, Test) ? teacher_tests_path : tests_path
     li= link_to "Вийти", destroy_user_session_path, method: :delete
   - else
     li= link_to "Логін", new_user_session_path
