--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,9 +8,10 @@ html
     = csrf_meta_tags
   body
     .head-block
+      = render 'shared/site_header'
     .page-body
       .options-menu
-        = render 'layouts/user_header'
+        = render 'shared/user_header'
       .additional-info
       .general-block
         = yield
