Create questions/answer_settings without js

--- a/app/assets/stylesheets/answer_settings.scss
+++ b/app/assets/stylesheets/answer_settings.scss
@@ -1,8 +1,8 @@
-// Place all the styles related to the question controller here.
+// Place all the styles related to the AnswerSettings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#question {
+#answer {
 
   position:relative;
   left:0%;
