--- a/app/views/teacher/questions/_question.html.slim
+++ b/app/views/teacher/questions/_question.html.slim
@@ -3,8 +3,8 @@
   - @questions.each do |question|
     ol.list
       b = question.text
-    /.  b = question.answer_settings
-    /. b = question.answer_settings.map(&:name).join(', ')
+      p = question.answer_settings.map(&:name).join(' | ')
+      /. p = answers_from_question (question.answer_settings.to_a)
     /.  = link_to 'Destroy', { controller: "teacher/questions", action: "destroy", id: question.id }, method: :delete, data: { confirm: 'Are you sure?' }
 
 
