setting warden for sinatra
still doesn`t work corectly

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,7 +3,7 @@
 {{#if session.isAuthenticated}}
   <a {{ action 'invalidateSession' }}>Logout</a>
 {{else}}
-  <a {{ action 'authenticateSession' }}>Login</a>
+  {{#link-to 'login'}}Login{{/link-to}}
 {{/if}}
 
 {{outlet}}
