--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,7 +3,8 @@
 {{#if session.isAuthenticated}}
   <a {{ action 'invalidateSession' }}>Logout</a>
 {{else}}
-  {{#link-to 'login'}}Login{{/link-to}}
+  {{#link-to 'login'}}Login{{/link-to}} or
+  {{#link-to 'registration'}}Registration{{/link-to}}
 {{/if}}
 
 {{outlet}}
