--- a/api/app/views/layouts/application.html.slim
+++ b/api/app/views/layouts/application.html.slim
@@ -3,16 +3,9 @@ html
   head
     meta content="text/html; charset=UTF-8" http-equiv="Content-Type"
     title SchoolTest
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    = csrf_meta_tags
+    = stylesheet_link_tag    "application", media: "all"
+    = javascript_include_tag "application"
+    = include_ember_script_tags :frontend
+    = include_ember_stylesheet_tags :frontend
   body
-    .head-block
-      = render 'shared/site_header'
-    .page-body
-      .options-menu
-        = render 'shared/user_header'
-      .additional-info
-      .general-block
-        = yield
-    .footer
+    = yield
