--- a/frontend/app/templates/registration.hbs
+++ b/frontend/app/templates/registration.hbs
@@ -1,18 +1,23 @@
 <form {{action 'registration' on='submit'}}>
   <label for="full_name">Full Name</label>
-  {{input value=full_name placeholder='Enter your full name'}}
+  {{input value=user.full_name placeholder='Enter your full name'}}
 
   <label for="email">Email</label>
-  {{input value=email placeholder='Enter Email'}}
+  {{input value=user.email placeholder='Enter Email'}}
 
   <label for="klass">Class</label>
-  {{view "select" content=klases prompt="Please select a class"}}
+  {{view "select"
+    content=klasses
+    prompt="Please select a class"
+    optionValuePath="content.id"
+    optionLabelPath="content.name"
+  }}
 
   <label for="password">Password</label>
-  {{input value=password placeholder='Enter Password' type='password'}}
+  {{input value=user.password placeholder='Enter Password' type='password'}}
 
   <label for="confirm_password">Confirm Password</label>
-  {{ input value=confirm_password placeholder='Confirm Password' type='password' }}
+  {{ input value=user.confirm_password placeholder='Confirm Password' type='password' }}
 
   <button type="submit">Registration</button>
 </form>
