--- a/frontend/app/templates/registration.hbs
+++ b/frontend/app/templates/registration.hbs
@@ -1,23 +1,50 @@
 <form {{action 'registration' on='submit'}}>
   <label for="full_name">Full Name</label>
-  {{input value=user.full_name placeholder='Enter your full name'}}
+  {{input value=model.full_name placeholder='Enter your full name'}}
+  {{#each model.errors.full_name as |error|}}
+    <div class="error">
+      {{error.message}}
+    </div>
+  {{/each}}
 
   <label for="email">Email</label>
-  {{input value=user.email placeholder='Enter Email'}}
+  {{input value=model.email placeholder='Enter Email'}}
+  {{#each model.errors.email as |error|}}
+    <div class="error">
+      {{error.message}}
+    </div>
+  {{/each}}
 
-  <label for="klass">Class</label>
+  <label for="klass">Klass</label>
   {{view "select"
     content=klasses
     prompt="Please select a class"
     optionValuePath="content.id"
     optionLabelPath="content.name"
+    value=selectedKlass
   }}
 
-  <label for="password">Password</label>
-  {{input value=user.password placeholder='Enter Password' type='password'}}
+  {{#each model.errors.klass as |error|}}
+    <div class="error">
+      {{error.message}}
+    </div>
+  {{/each}}
 
-  <label for="confirm_password">Confirm Password</label>
-  {{ input value=user.confirm_password placeholder='Confirm Password' type='password' }}
+  <label for="password">Password</label>
+  {{input value=model.password placeholder='Enter Password' type='password'}}
+  {{#each model.errors.password as |error|}}
+    <div class="error">
+      {{error.message}}
+    </div>
+  {{/each}}
+
+  <label for="passwordConfirmation">Confirm Password</label>
+  {{ input value=model.passwordConfirmation placeholder='Confirm Password' type='password' }}
+  {{#each model.errors.passwordConfirmation as |error|}}
+    <div class="error">
+      {{error.message}}
+    </div>
+  {{/each}}
 
   <button type="submit">Registration</button>
 </form>
