finished validation for registration user

--- a/frontend/app/templates/registration.hbs
+++ b/frontend/app/templates/registration.hbs
@@ -21,7 +21,7 @@
     prompt="Please select a class"
     optionValuePath="content.id"
     optionLabelPath="content.name"
-    value=selectedKlass
+    selectionBinding="klass"
   }}
 
   {{#each model.errors.klass as |error|}}
