--- a/api/app/views/layouts/application.html.slim
+++ b/api/app/views/layouts/application.html.slim
@@ -7,5 +7,6 @@ html
     = javascript_include_tag "application"
     = include_ember_script_tags :frontend
     = include_ember_stylesheet_tags :frontend
+    = csrf_meta_tags
   body
     = yield
