--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,4 +1,12 @@
 <h2 id="title">Welcome to Ember.js</h2>
+<div class="navbar-header">
+  {{#link-to 'index' classNames='navbar-brand'}}
+    Home
+  {{/link-to}}
+  {{#link-to session.currentUser.full_name classNames='navbar-brand'}}
+    Tests
+  {{/link-to}}
+</div>
 
 {{#if session.isAuthenticated}}
   <a {{ action 'invalidateSession' }}>Logout</a>
