moved entity, set currentUser via Ember
CU doesnt work. wrong returned data

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,6 +3,7 @@
   {{#link-to 'index' classNames='navbar-brand'}}
     Home
   {{/link-to}}
+  {{currentUser.category.name}}
   {{#link-to session.currentUser.full_name classNames='navbar-brand'}}
     Tests
   {{/link-to}}
