--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -12,7 +12,7 @@
   {{/link-to}}
   {{#if session.isAuthenticated}}
     {{#if currentUserIsAdmin}}
-      {{#link-to 'admin.tests' classNames='navbar-brand'}}
+      {{#link-to 'admin.test_settings' classNames='navbar-brand'}}
         Tests
       {{/link-to}}
     {{else}}
