resolve few deprecations and bugs

--- a/frontend/app/templates/admin/test_settings/edit.hbs
+++ b/frontend/app/templates/admin/test_settings/edit.hbs
@@ -45,7 +45,7 @@
         prompt="Please select a theme"
         optionValuePath="content.id"
         optionLabelPath="content.name"
-        selectionBinding="model.theme"
+        selection=model.theme
       }}
       {{input checked=model.theme type="checkbox"}}
     </div>
