--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,8 +27,21 @@
 //
 // Example:
 // @link-color: #ff0000;
-
-  #link {
-    font-size: 16px;
+#error_explanation {
+  border: 1px solid #0071B5;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #fcf8e3;
+  h2 {
+    text-align: left;
     font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 16px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #fcf8e3;
+    color: #0071B5;
   }
+}
+
