--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,31 +1,48 @@
-h2
-  | Редагувати #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    div
-      | Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    i (Залиште пустим якщо не хочете змінювати)
-    br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    i (нам потрібен ваш поточний пароль для підтвердження ваших змін)
-    br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Оновити"
-h3 Відмінити мій акаунт
-p
-  | Unhappy? #{button_to "Відмінити мій акаунт", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Назад", :back
+.col-md-8
+  h3
+    = t '.h_edit'
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f|
+    = devise_error_messages!
+    .field
+      = f.label :email
+      br
+      = f.email_field :email, autofocus: true
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+      div
+        | Currently waiting confirmation for: #{resource.unconfirmed_email}
+    .field
+      - if current_user.avatar.url.present?
+        b
+          = t('.avatar')
+        = image_tag(current_user.avatar.url(:thumb))
+        = f.label :remove_avatar do
+          = f.check_box :remove_avatar
+      b
+        = t('.choose_avatar')
+      = f.file_field :avatar
+      = f.hidden_field :avatar_cache
+    .field
+      = f.label :password
+      i
+        = t('.leave_blank')
+      br
+      = f.password_field :password, autocomplete: "off"
+    .field
+      = f.label :password_confirmation
+      br
+      = f.password_field :password_confirmation, autocomplete: "off"
+    .field
+      = f.label :current_password
+      i
+        = t('.we_need_password')
+      br
+      = f.password_field :current_password, autocomplete: "off"
+    br
+    .actions
+      = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
+  h3
+    = t('.h_cancel_account')
+  p
+    = t('.unhappy')
+    = button_to t('.buttons.cancel_account'), registration_path(resource_name), data: { confirm: "t('.are_you_sure')" }, method: :delete, class: "btn btn-danger"
+  = link_to t('.buttons.back'), :back
