--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,29 +1,75 @@
-h2 Реєстрація
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :full_name, 'Прізвище та Ім’я'
-    br/
-    = f.text_field :full_name, autofocus: true
-  .field
-    = f.label :klass_id, 'Клас'
-    br/
-    = f.select :klass_id, options_for_select(klass_options)
-  .field
-    = f.label :email
-    br/
-    = f.email_field :email
-  .field
-    = f.label :password, 'Пароль'
-    - if @validatable
-      em
-        | (мінімум #{@minimum_password_length} символів)
-    br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation, 'Підтвердження паролю'
-    br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Реєстрація"
-= render "devise/shared/links"
+ul.nav.nav-tabs
+  li.active
+    =link_to t('.buttons.student'), "#tab1", html_options = { "data-toggle" => "tab" }
+  li
+    =link_to t('.buttons.teacher'), "#tab2", html_options = { "data-toggle" => "tab" }
+
+.tab-content
+  .tab-pane.active#tab1
+    h3
+      = t '.h_registration'
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .col-md-2
+        .field
+          = f.label :full_name
+          = f.text_field :full_name, autofocus: true
+        .field
+          = f.label :email
+          = f.email_field :email
+        .field
+          = f.label :categgory_id
+          = f.collection_select :categgory_id, Categgory.all, :id, :name
+          = hidden_field_tag(:user_role, :student)
+        .field
+          = f.label :password
+          - if @validatable
+            em
+              = '.min_password_length'
+          = f.password_field :password, autocomplete: "off"
+        .field
+          = f.label :password_confirmation, t('.password_confirmation')
+          br
+          = f.password_field :password_confirmation, autocomplete: "off"
+        br
+        .actions
+          = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
+        = render "devise/shared/links"
+
+
+  .tab-pane#tab2
+    h3
+      = t'.h_registration'
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {multipart: true}) do |f|
+      = devise_error_messages!
+      .col-md-2
+        .field
+          = f.label :full_name
+          = f.text_field :full_name, autofocus: true
+        .field
+          = f.label :email
+          = f.email_field :email
+        .field
+          = f.label :subject_id
+          = f.collection_select :subject_id, Subject.all, :id, :name
+          = hidden_field_tag(:user_role, :teacher)
+        .field
+          = f.label :password
+          - if @validatable
+            em
+              | (мінімум #{@minimum_password_length} символів)
+          = f.password_field :password, autocomplete: "off"
+        .field
+          = f.label :password_confirmation
+          br
+          = f.password_field :password_confirmation, autocomplete: "off"
+        .field
+          b
+            = t('.choose_avatar')
+          = f.label :avatar do
+            = f.file_field :avatar, class: "carrier"
+            = f.hidden_field :avatar_cache
+        br
+        .actions
+          = f.submit t('.buttons.submit'), class: "btn btn-info", id: "b_registration"
+        = render "devise/shared/links"
