--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,13 +36,14 @@
   h2 {
     text-align: left;
     font-weight: bold;
-
-    padding: 5px 5px 5px 15px;
-    font-size: 16px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #fcf8e3;
-    color: #0071B5;
   }
 }
+h1, h2, h3, h4 {
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 10px 10px 10px;
+  margin: 10px;
+    color: #0071B5;
+}
+
 
