--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#search_field {
+  position:relative;
+    left:0px;
+    top:20px;
+  height: 500px;
+  background: #ccffff;
+}
+
+.search_form {
+  position:relative;
+    left:25px;
+    top:20px;
+}
+
+#news_field {
+  position:relative;
+    left:0px;
+    top:80px;
+}
+
+#main_new_field {
+  position:relative;
+  top:20px;
+  background: #ccff99;
+}
+
+#search {
+  height: 33px;
+}
+
+.img {
+  position:relative;
+    left:0px;
+    top:-70px;
+}
+
+#clean_search {
+  position:relative;
+    left: 280px;
+    top: -15px;
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #A4A4A4;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  line-height: 1;
+  &:hover::after {
+   content: attr(data-title);
+   font-size: 16px;
+   color: black;
+   left: 20%; top: 40%;
+}
+}
