--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,7 +28,9 @@
 // Example:
 // @link-color: #ff0000;
 
-  #link {
-    font-size: 16px;
-    font-weight: bold;
-  }
+h1, h2, h3, h4 {
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 10px 10px 10px;
+  margin: 10px;
+}
