--- a/app/views/shared/_user_menu.html.slim
+++ b/app/views/shared/_user_menu.html.slim
@@ -6,3 +6,4 @@ ul.nav.nav-pills.pull-right
   - else
     li= link_to "Логін", new_user_session_path
     li= link_to "Зареєструватися", new_user_registration_path
+h2 Школа №
