--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -46,4 +46,10 @@ h1, h2, h3, h4 {
     color: #0071B5;
 }
 
+.field_with_errors {
+  color: #a94442;
+  input {
+    border-color: #a94442;
+  }
+}
 
