--- a/app/assets/stylesheets/test_settings.css.scss
+++ b/app/assets/stylesheets/test_settings.css.scss
@@ -1,4 +1,32 @@
-.test-settings-form{width: 50}
-    .list {
-  border-bottom: 1px solid #ccc;
-  }
+#question_answer {
+  position:relative;
+    left:750px;
+    top:-600px;
+}
+
+.test-settings-form {
+  height: 600px;
+}
+
+.l_add_question {
+  position:relative;
+    left:0px;
+    top:-20px;
+}
+
+#test_setting_categgory_id, #test_setting_subject_id, #test_setting_theme_id, #b_save_test {
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 16px;
+  color: White;
+  background: #5bc0de;
+  border: Black;
+  height: 40px;
+  width: 175px;
+}
+
+#b_save_test {
+  position:relative;
+    left:-120px;
+    top:80px;
+}
