--- a/app/views/shared/_user_menu.html.slim
+++ b/app/views/shared/_user_menu.html.slim
@@ -12,6 +12,8 @@ ul.nav.nav-pills.pull-right
 
 
   - if user_signed_in?
+    - if current_user.has_role? :admin
+      li= link_to t('.buttons.add_news'), new_admin_tiding_path
     li= link_to t('.buttons.main'), root_path
     li= link_to t('.buttons.testing'), can?(:manage, Test) ? teachers_test_settings_path : tests_path
     li= link_to t('.buttons.edit_profile'), edit_user_registration_path
