--- a/app/views/shared/_user_menu.html.slim
+++ b/app/views/shared/_user_menu.html.slim
@@ -9,8 +9,10 @@ ul.nav.nav-pills.pull-right
       li
         = link_to_unless_current "Українська", locale: "ua"
 
+  li= link_to t('.buttons.comments'), new_comment_path
   - if user_signed_in?
     - if current_user.has_role? :admin
+      li= link_to t('.buttons.wath_comments'), admin_comments_path
       li= link_to t('.buttons.manage_students'), admin_students_path
       li= link_to t('.buttons.edit'), admin_users_path
       li= link_to t('.buttons.add_news'), new_admin_tiding_path
