--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -63,3 +63,20 @@ h1, h2, h3, h4 {
     border-color: #a94442;
   }
 }
+
+.notice {
+  text-align: center;
+  font-weight: bold;
+  color: #0071B5;
+  background: #fcf8e3;
+
+.alert {
+  text-align: center;
+  font-weight: bold;
+  color: #0071B5 !important;
+  background: #FFFFFF !important;
+  border: #FFFFFF !important;
+  margin: 0px;
+  padding: 5px;
+}
+
