--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,7 @@ html
     = javascript_include_tag "application"
     = csrf_meta_tags
   body
+    #flash
+      p.notice= notice
+      p.alert= alert
     = yield
