--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,22 +33,33 @@
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #fcf8e3;
+
   h2 {
     text-align: left;
     font-weight: bold;
   }
 }
+
 h1, h2, h3, h4 {
   text-align: center;
   font-weight: bold;
   padding: 10px 10px 10px 10px;
   margin: 10px;
-    color: #0071B5;
+  color: #0071B5;
+}
+
+.ul_list_style {
+  list-style-type:none;
 }
 
 .field_with_errors {
   color: #a94442;
+
   input {
+    border-color: #a94442;
+  }
+
+  textarea {
     border-color: #a94442;
   }
 }
