--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -85,7 +85,6 @@ h1, h2, h3, h4 {
   text-align: center;
   font-weight: bold;
   color: #0071B5 !important;
-  background: #FFFFFF !important;
   border: #FFFFFF !important;
   margin: 0px;
   padding: 5px;
@@ -169,4 +168,17 @@ footer {
   left:75%;
 }
 
-
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  filter:alpha(opacity=50);
+  -moz-opacity:0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.96;
+  z-index: 10000;
+  display: none;
+}
