--- a/app/assets/stylesheets/students/test_settings.scss
+++ b/app/assets/stylesheets/students/test_settings.scss
@@ -1,30 +1,31 @@
 /* index*/
 #show_test_setting_links {
   position:relative;
-  left:-200px;
+  left:-4%;
   top:70px;
 }
 
 #h_test_list {
   position:relative;
-  left:100px;
+  left:15%;
 }
 
+#form-student-choose-tests {
+  height:465px;
+}
 /* show*/
 #button_pass_test {
   position:relative;
-  left:420px;
+  left:50%;
   top:10px;
 }
 
 #section_with_files_and_video {
   position:relative;
-  left:100px;
-  top:0px;
+  left:12%;
 }
 
 #you_couldnt_try {
   position:relative;
-  left:280px;
-  top:0px;
+  left:27%;
 }
