--- a/app/assets/stylesheets/admin/student.scss
+++ b/app/assets/stylesheets/admin/student.scss
@@ -1,12 +1,12 @@
       /* index */
-#admin-table-with-students {
+#admin_table_with_students {
   position:relative;
-  left:25%;
+  left:220px;
   top:0px;
 }
 
-#admin-student-table-pagination {
+#admin_student_table_pagination {
   position:relative;
-  left:40%;
+  left:470px;
   top:0px;
 }
