--- a/app/views/welcome/_tidings.html.slim
+++ b/app/views/welcome/_tidings.html.slim
@@ -1,11 +1,13 @@
 #tiding_list
   h4 Новини
   - @tidings.each do |tiding|
-    ul style="list-style-type:none"
+    ul.ul_list_style
       li
         = date_format(tiding.updated_at)
         b
           = link_to tiding.title, admin_tiding_path(tiding)
 
-
-
+#tiding_table_pagination
+  ul.ul_list_style
+    li.active
+      span= paginate @tidings
