--- a/app/views/teachers/test_settings/index.html.slim
+++ b/app/views/teachers/test_settings/index.html.slim
@@ -5,4 +5,4 @@
       li
         = test.name
       li
-        = video_tag test.video_url.to_s, controls: true
+        / = video_tag test.video_url.to_s, controls: true
