--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -10,8 +10,8 @@
     .row-fluid
       .col-md-8#main_new_field
         h4
-          = @post.title
-        = @post.text
+          = @post.try(:title)
+        = @post.try(:text)
 
       .col-md-4#search_field
         = form_tag(search_welcome_index_path, method: "get", class: "search_form") do
