--- a/app/assets/stylesheets/test_settings.scss
+++ b/app/assets/stylesheets/test_settings.scss
@@ -53,12 +53,18 @@
 /* show*/
 #button_pass_test {
   position:relative;
-  left:440px;
+  left:420px;
   top:10px;
 }
 
 #section_with_files_and_video {
   position:relative;
   left:100px;
+  top:0px;
+}
+
+#you_couldnt_try{
+  position:relative;
+  left:280px;
   top:0px;
 }
