--- a/app/assets/stylesheets/students/test_settings/css/jquery.countdown.css
+++ b/app/assets/stylesheets/students/test_settings/css/jquery.countdown.css
@@ -2,6 +2,8 @@
 .is-countdown {
 	border: 1px solid #ccc;
 	background-color: #eee;
+	height: 55px;
+	width: 200px;
 }
 .countdown-rtl {
 	direction: rtl;
