bug with saving answers

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -83,3 +83,15 @@ h1, h2, h3, h4 {
   padding: 5px;
 }
 
+.table {
+
+  td {
+    vertical-align: middle;
+    text-align: center;
+  }
+
+  th {
+    vertical-align: middle;
+    text-align: center;
+  }
+}
