work with mistakes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -50,6 +50,7 @@ h1, h2, h3, h4 {
 
 .ul_list_style {
   list-style-type:none;
+  padding-left: 10px;
 }
 
 .field_with_errors {
@@ -94,4 +95,8 @@ h1, h2, h3, h4 {
     vertical-align: middle;
     text-align: center;
   }
+}
+
+#flash {
+  margin-top: 35px;
 }
