--- a/app/views/welcome/show.html.slim
+++ b/app/views/welcome/show.html.slim
@@ -1,9 +1,8 @@
-.col-md-8
+.col-md-12
   h3
     = @tiding.title
   = @tiding.text
 
-
 .col-md-12
   br
-  = link_to t('.buttons.back'), root_path
+  = link_to t('.buttons.back'), :back
