--- a/app/assets/stylesheets/admin/comments.scss
+++ b/app/assets/stylesheets/admin/comments.scss
@@ -1,7 +1,4 @@
-// Place all the styles related to the comments controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-/*admin index*/
+/*index*/
 
 #author, #main_part, #comment_created_at {
   background: #F7FBFF;
