--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -14,6 +14,7 @@ ul.nav.nav-pills.pull-right
   - if user_signed_in?
     - if current_user.has_role? :student
       li= link_to t('.buttons.pass_test'), students_test_settings_path
+      / li= link_to t('.buttons.test_results'), students_tests_path
     - elsif current_user.has_role? :teacher
       li= link_to t('.buttons.new_test'), new_teachers_test_setting_path
       li= link_to t('.buttons.testing'), teachers_test_settings_path
