--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,12 @@ html
 
     = csrf_meta_tags
   body
-    #flash
-      p.notice= notice
-      p.alert= alert
-    = yield
+    = render 'layouts/header'
+    .container-fluid
+      .row-fluid
+        #flash
+          p.notice= notice
+          p.alert= alert
+        .col-md-12
+          = yield
+    = render 'layouts/footer'
